fix: increase padding for select to prevent text overlapping to arrow

--- a/src/Select/Select.scss
+++ b/src/Select/Select.scss
@@ -8,7 +8,7 @@
     display: flex;
     font-size: 16px;
     width: 100%;
-    padding: 12px 18px 13px;
+    padding: 12px 36px 13px 18px;
     border-radius: 8px;
     border: 2px solid rgba(111, 114, 121, 0.16);
     background-color: #fff;
